tests/specs/ecosystem/std/testing/0_212_0.test
std/testing/0.212.0
-- deno.lock --
{
  "version": "3",
  "packages": {
    "specifiers": {
      "jsr:@std/async@^0.212.0": "jsr:@std/async@0.212.0"
    },
    "jsr": {
      "@std/async@0.212.0": {
        "integrity": "bfb631a60a2c814ffb95b23b70726f00ae528867d194851be14d351bb2963aba"
      }
    }
  },
  "remote": {}
}

===

== FAST CHECK EMIT FAILED ==
error[missing-explicit-return-type]: missing explicit return type in the public API
   --> /bdd.ts:581:11
    | 
581 | it.only = function itOnly<T>(...args: ItArgs<T>) {
    |           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    | 
582 |   const options = itDefinition(...args);
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    | 
583 |   return it({
    | ^^^^^^^^^^^^^
    | 
584 |     ...options,
    | ^^^^^^^^^^^^^^^
    | 
585 |     only: true,
    | ^^^^^^^^^^^^^^^
    | 
586 |   });
    | ^^^^^
    | 
587 | };
    | ^ this function is missing an explicit return type
    | 
    = hint: add an explicit return type to the function

  info: all functions in the public API must have an explicit return type
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


error[missing-explicit-return-type]: missing explicit return type in the public API
   --> /bdd.ts:589:13
    | 
589 | it.ignore = function itIgnore<T>(...args: ItArgs<T>) {
    |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    | 
590 |   const options = itDefinition(...args);
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    | 
591 |   return it({
    | ^^^^^^^^^^^^^
    | 
592 |     ...options,
    | ^^^^^^^^^^^^^^^
    | 
593 |     ignore: true,
    | ^^^^^^^^^^^^^^^^^
    | 
594 |   });
    | ^^^^^
    | 
595 | };
    | ^ this function is missing an explicit return type
    | 
    = hint: add an explicit return type to the function

  info: all functions in the public API must have an explicit return type
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


